--- a/.github/workflows/buildsln-windows-cache.yml
+++ b/.github/workflows/buildsln-windows-cache.yml
@@ -1,4 +1,4 @@
-name: buildsln-windows
+name: buildsln-windows-cache
 
 on:
   push:
@@ -13,7 +13,9 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-      - run: dotnet restore 
+      	  cache: true
+          cache-dependency-path: "**/packages.lock.json"
+      - run: dotnet restore --locked-mode 
       - run: dotnet build bitwarden-server.sln
 
 
