--- a/src/Identity/Identity.csproj
+++ b/src/Identity/Identity.csproj
@@ -4,7 +4,9 @@
     <UserSecretsId>bitwarden-Identity</UserSecretsId>
     <MvcRazorCompileOnPublish>false</MvcRazorCompileOnPublish>
   </PropertyGroup>
-
+ <PropertyGroup>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Identity' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Identity-SelfHost' " />
   <ItemGroup>
