--- a/src/Icons/Icons.csproj
+++ b/src/Icons/Icons.csproj
@@ -4,7 +4,9 @@
     <UserSecretsId>bitwarden-Icons</UserSecretsId>
     <MvcRazorCompileOnPublish>false</MvcRazorCompileOnPublish>
   </PropertyGroup>
-
+ <PropertyGroup>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Icons' " />
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.1.2" />
