--- a/util/Setup/Setup.csproj
+++ b/util/Setup/Setup.csproj
@@ -4,7 +4,9 @@
     <OutputType>Exe</OutputType>
     <NoWarn>1701;1702;1705;NU1701</NoWarn>
   </PropertyGroup>
-
+ <PropertyGroup>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Templates\**\*.hbs" />
   </ItemGroup>
