Update and rename buildsln-windows-cache.yml to buildsln-windows-lockedMode-nocache.yml

--- a/.github/workflows/buildsln-windows-lockedMode-nocache.yml
+++ b/.github/workflows/buildsln-windows-lockedMode-nocache.yml
@@ -1,4 +1,4 @@
-name: buildsln-windows-cache
+name: buildsln-windows-lockedMode-nocache
 
 on:
   push:
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-          cache: true
-          cache-dependency-path: "**/packages.lock.json"
+          cache: false
+          
       - run: dotnet restore --locked-mode 
       - run: dotnet build bitwarden-server.sln
 
